<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InterestSelectionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_interest_selection"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/ibtn_toolbar_interest_selection"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit_page" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_title_interest_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1d1d1d"
        android:textSize="24sp"
        android:text="@string/title_interest_selection"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_interest_selection" />

    <TextView
        android:id="@+id/tv_tip_interest_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_interest_selection"
        android:textColor="#aeaeae"
        android:textSize="13sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_interest_selection" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_interest_selection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:spanCount="3"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btn_ok_interest_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip_interest_selection" />

    <Button
        android:id="@+id/btn_ok_interest_selection"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/button_purple_radius10"
        android:text="다음"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>